--- a/start.html
+++ b/start.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello everyone!</h1>
     <h2>Beautiful Bangladesh</h2>
+    <img src="im1.jfif" alt="view point">
 </body>
 </html>
