--- a/start.html
+++ b/start.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Hello everyone!</h1>
     <h2>Beautiful Bangladesh</h2>
+    <div>
+        <h1>New Blog</h1>
+        <h5>look here</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda labore nostrum laudantium accusamus fugit ab ducimus sed aliquid nihil quibusdam voluptate perferendis, sit quaerat sequi libero consequuntur porro architecto ullam!
+        </p>
+    </div>
     <img src="im1.jfif" alt="view point">
 </body>
 </html>
